--- a/index.html
+++ b/index.html
@@ -8,76 +8,59 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f5f5f5;
-            text-align: center;
-            margin: 0;
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
         }
+        .logo {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+        }
         h1 {
-            color: #333;
-        }
-        .logo-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        .table-container {
-            margin: 40px auto;
-            width: 80%;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        table, th, td {
-            border: 1px solid #ccc;
-        }
-        th, td {
-            padding: 10px;
             text-align: center;
-        }
-        th {
-            background-color: #f1f1f1;
-        }
-        .title {
             font-size: 2.5em;
             color: #333;
             font-weight: bold;
         }
-        .subtitle {
-            font-size: 1.2em;
+        h2 {
+            text-align: center;
+            front-size: 1.2em;
             color: #555;
             margin-top: 15px;
         }
-        .kader-section {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        .kader-table {
-            width: 120px;
-            margin: 10px;
-            border-collapse: collapse;
-        }
-        .kader-table th, .kader-table td {
-            text-align: left;
+        input[type="text"] {
+            width: calc(25% - 10px);
+            margin: 5px;
             padding: 5px;
-            border: 1px solid #ddd;
         }
-        .button-container {
-            margin-top: 10px;
+        button {
+            margin: 5px;
+            padding: 5px 10px;
         }
-         .button-container button:disabled {
+        button[disabled] {
             background-color: #ccc;
             cursor: not-allowed;
         }
-         .button-container button:not(:disabled) {
-            background-color: #4CAF50;
-            color: white;
-            cursor: pointer;
+        #gespeicherterKader {
+            margin-top: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f3f3f3;
+        }
+        .edit-mode input {
+            width: calc(100% - 22px);
+        }
         }
     </style>
 </head>
