--- a/index.html
+++ b/index.html
@@ -8,59 +8,76 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f5f5f5;
-            max-width: 800px;
-            margin: 0 auto;
+            text-align: center;
+            margin: 0;
             padding: 20px;
         }
-        .logo {
-            display: block;
-            margin: 0 auto;
-            max-width: 100%;
-        }
         h1 {
-            text-align: center;
-            font-size: 2.5em;
             color: #333;
-            font-weight: bold;
         }
-        h2 {
-            text-align: center;
-            front-size: 1.2em;
-            color: #555;
-            margin-top: 15px;
+        .logo-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 20px;
         }
-        input[type="text"] {
-            width: calc(25% - 10px);
-            margin: 5px;
-            padding: 5px;
-        }
-        button {
-            margin: 5px;
-            padding: 5px 10px;
-        }
-        button[disabled] {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-        #gespeicherterKader {
-            margin-top: 20px;
+        .table-container {
+            margin: 40px auto;
+            width: 80%;
         }
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+        table, th, td {
+            border: 1px solid #ccc;
         }
         th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
+            padding: 10px;
+            text-align: center;
         }
         th {
-            background-color: #f3f3f3;
+            background-color: #f1f1f1;
         }
-        .edit-mode input {
-            width: calc(100% - 22px);
+        .title {
+            font-size: 2.5em;
+            color: #333;
+            font-weight: bold;
         }
+        .subtitle {
+            font-size: 1.2em;
+            color: #555;
+            margin-top: 15px;
+        }
+        .kader-section {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .kader-table {
+            width: 120px;
+            margin: 10px;
+            border-collapse: collapse;
+        }
+        .kader-table th, .kader-table td {
+            text-align: left;
+            padding: 5px;
+            border: 1px solid #ddd;
+        }
+        .button-container {
+            margin-top: 10px;
+        }
+         .button-container button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+         .button-container button:not(:disabled) {
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
         }
     </style>
 </head>
