--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f5f5f5;
-            text-align: center;
-            margin: 0;
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
         }
         h1 {
