--- a/spieltagskader.html
+++ b/spieltagskader.html
@@ -64,7 +64,7 @@
     </style>
 </head>
 <body>
-    <img src="1.png" alt="Bundesliga Manager Logo" class="logo" onclick="window.location.href='index.html'">
+    <img src="Logo Manager.png" alt="Bundesliga Manager Logo" class="logo" onclick="window.location.href='index.html'">
     <h1>Bundesliga Manager</h1>
     <h2>Fairness. Spaß. Wettkampf.</h2>
 
