--- a/spieltagskader.html
+++ b/spieltagskader.html
@@ -25,7 +25,7 @@
         }
         h2 {
             text-align: center;
-            front-size: 1.2em;
+            font-size: 1.2em;
             color: #555;
             margin-top: 15px;
         }
