--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     <h1>Bundesliga Manager</h1>
     <h2>Fairness. Spaß. Wettkampf.</h2>
 
+    <a href="https://fransen58.github.io/bundesliga-manager/spieltagskader.html">Startelf</a>
+
     <h3>Die Tabelle</h3>
     <table id="bundesligaTable">
         <tr>
