--- a/spieltagskader.html
+++ b/spieltagskader.html
@@ -65,6 +65,14 @@
 </head>
 <body>
     <img src="Logo Manager.png" alt="Bundesliga Manager Logo" class="logo" onclick="window.location.href='index.html'">
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Startseite</a></li>
+            <li><a href="spieltagskader.html">Spieltagskader</a></li>
+    </ul>
+    </nav>
+    
     <h1>Bundesliga Manager</h1>
     <h2>Fairness. Spaß. Wettkampf.</h2>
 
