--- a/spieltagskader.html
+++ b/spieltagskader.html
@@ -75,7 +75,8 @@
     
     <h1>Bundesliga Manager</h1>
     <h2>Fairness. Spaß. Wettkampf.</h2>
-
+    
+    <h3>Name des Managers</h3>
     <input type="text" id="managerName" placeholder="Dein Name" style="width: calc(100% - 10px);">
 
     <h3>Startelfspieler (11 Spieler)</h3>
