--- a/spieltage.html
+++ b/spieltage.html
@@ -5,7 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bundesliga Manager - Spieltage</title>
     <style>
-        /* Verwenden Sie den gleichen Stil wie auf der Startseite */
+body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .logo {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+        }
+        h1 {
+            text-align: center;
+            font-size: 2.5em;
+            color: #333;
+            font-weight: bold;
+        }
+        h2 {
+            text-align: center;
+            font-size: 1.2em;
+            color: #555;
+            margin-top: 15px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f3f3f3;
+        }
+        .edit-mode input {
+            width: calc(100% - 10px);
+        }
+        button {
+            margin: 5px;
+            padding: 5px 10px;
+        }
+        button[disabled] {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }      
         body {
             font-family: Arial, sans-serif;
             background-color: #f5f5f5;
@@ -66,8 +113,8 @@
         </ul>
     </nav>
 
-    <h1>Bundesliga Manager - Spieltage</h1>
-    <h2>Auswertung der Bundesliga-Spieltage</h2>
+    <h1>Spieltage</h1>
+    <h2>Auswertung und Ergebnisse</h2>
 
     <h3>Spieltag 1</h3>
     <table id="spieltag1">
@@ -138,8 +185,66 @@
     <!-- Fügen Sie weitere Spieltage nach diesem Muster hinzu -->
     <h3>Spieltag 2</h3>
     <table id="spieltag2">
-        <!-- Tabelleninhalt für Spieltag 2 -->
-    </table>
+        <tr>
+            <th>Platz</th>
+            <th>Manager</th>
+            <th>Noten</th>
+            <th>Tore</th>
+            <th>Gegentore</th>
+            <th>11 des Tages</th>
+            <th>Assists</th>
+            <th>Gesamt</th>
+        </tr>
+        <tr>
+            <td>1.</td>
+            <td>Moritz</td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>2.</td>
+            <td>Leon I.</td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>3.</td>
+            <td>Bent</td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>4.</td>
+            <td>Leon B.</td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>5.</td>
+            <td>Jonas</td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td><input type="number" value="0"></td>
+            <td>0</td>
+        </tr>    </table>
     <button id="save-spieltag2" onclick="speichereAenderungen('spieltag2')" disabled>Speichern</button>
     <button id="cancel-spieltag2" onclick="brecheAenderungenAb('spieltag2')" disabled>Abbrechen</button>
 
